@@ -1,36 +1,22 @@
 require "administrate/base_dashboard"
 
 class LineItemDashboard < Administrate::BaseDashboard
-  def table_attributes
-    attributes + [:total_price]
-  end
+  ATTRIBUTES = [
+    :order,
+    :product,
+    :quantity,
+    :unit_price,
+  ]
 
-  def show_page_attributes
-    attributes + [:total_price]
-  end
+  ATTRIBUTE_TYPES = {
+    order: Field::BelongsTo,
+    product: Field::BelongsTo,
+    quantity: Field::String,
+    total_price: Field::String,
+    unit_price: Field::String,
+  }
 
-  def form_attributes
-    attributes
-  end
-
-  def attribute_types
-    {
-      order: Field::BelongsTo,
-      product: Field::BelongsTo,
-      quantity: Field::String,
-      total_price: Field::String,
-      unit_price: Field::String,
-    }
-  end
-
-  private
-
-  def attributes
-    [
-      :order,
-      :product,
-      :quantity,
-      :unit_price,
-    ]
-  end
+  TABLE_ATTRIBUTES = ATTRIBUTES + [:total_price]
+  SHOW_PAGE_ATTRIBUTES = ATTRIBUTES + [:total_price]
+  FORM_ATTRIBUTES = ATTRIBUTES
 end
